--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
     <!-- Навигация -->
     <nav class="nav" aria-label="Основная навигация">
       <div class="wrap">
-        <ul class="nav-list">
-          <li class="nav-item"><a class="nav-link" href="index.html" aria-current="page">Главная</a></li>
-          <li class="nav-item"><a class="nav-link" href="pages/news.html">Новости</a></li>
-          <li class="nav-item"><a class="nav-link" href="pages/practices.html">Практики</a></li>
-          <li class="nav-item"><a class="nav-link" href="pages/goods.html">Товары</a></li>
-          <li class="nav-item"><a class="nav-link" href="pages/contacts.html">Контакты</a></li>
+        <ul class="nav__list">
+          <li class="nav__item"><a class="nav__link" href="index.html" aria-current="page">Главная</a></li>
+          <li class="nav__item"><a class="nav__link" href="pages/news.html">Новости</a></li>
+          <li class="nav__item"><a class="nav__link" href="pages/practices.html">Практики</a></li>
+          <li class="nav__item"><a class="nav__link" href="pages/goods.html">Товары</a></li>
+          <li class="nav__item"><a class="nav__link" href="pages/contacts.html">Контакты</a></li>
         </ul>
       </div>
     </nav>
+
 
     <!-- Контент -->
     <main class="content" id="content" role="main">
