--- a/pages/goods.html
+++ b/pages/goods.html
@@ -11,55 +11,55 @@
   <div class="page-container">
     <header class="header" role="banner">
       <div class="wrap">
-        <h1 class="profile-title">Каталог</h1>
-        <p class="profile-group">Выберите товар</p>
+        <h1 class="header__title">Каталог</h1>
+        <p class="header__subtitle">Выберите товар</p>
       </div>
     </header>
-
     <nav class="nav" aria-label="Основная навигация">
       <div class="wrap">
-        <ul class="nav-list">
-          <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
-          <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
-          <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
-          <li class="nav-item"><a class="nav-link" href="goods.html" aria-current="page">Товары</a></li>
-          <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+        <ul class="nav__list">
+          <li class="nav__item"><a class="nav__link" href="../index.html">Главная</a></li>
+          <li class="nav__item"><a class="nav__link" href="news.html">Новости</a></li>
+          <li class="nav__item"><a class="nav__link" href="practices.html">Практики</a></li>
+          <li class="nav__item"><a class="nav__link nav__link--active" href="goods.html" aria-current="page">Товары</a></li>
+          <li class="nav__item"><a class="nav__link" href="contacts.html">Контакты</a></li>
         </ul>
       </div>
     </nav>
-
     <main class="content" role="main">
       <section aria-labelledby="catalog-title">
         <h2 id="catalog-title" class="section-title">Каталог</h2>
-
-        <div class="products-grid">
-          <article class="product-card" aria-labelledby="p1-name">
-            <img src="../images/product-ilya.jpg" alt="Илья Муромец с Юлий" class="product-image" width="200" height="250">
-            <h3 id="p1-name" class="product-name">Илья Муромец с Юлий</h3>
-            <p class="product-price">119 000 ₽</p>
-            <p class="experience-desc">Лимитированная серия, расширенная комплектация. </p>
-            <button class="contact-button" type="button">В корзину</button>
-          </article>
-
-          <article class="product-card" aria-labelledby="p2-name">
-            <img src="../images/product-dobrynya.jpg" alt="Добрыни Никитича" class="product-image" width="200" height="250">
-            <h3 id="p2-name" class="product-name">Добрыни Никитича</h3>
-            <p class="product-price">12 999 ₽</p>
-            <p class="experience-desc">Базовая модель с оптимальными характеристиками. </p>
-            <button class="contact-button" type="button">В корзину</button>
-          </article>
-
-          <article class="product-card" aria-labelledby="p3-name">
-            <img src="../images/product-alyozha.jpg" alt="Алёша Попович" class="product-image" width="200" height="250">
-            <h3 id="p3-name" class="product-name">Алёша Попович</h3>
-            <p class="product-price">7 999 ₽</p>
-            <p class="experience-desc">Компактный формат и выгодная цена. </p>
-            <button class="contact-button" type="button">В корзину</button>
-          </article>
+        <div class="hero-gallery">
+          <div class="hero-card">
+            <img class="hero-card__image" src="../images/product-ilya.jpg" alt="Илья Муромец с Юлий" width="200" height="250">
+            <div class="hero-card__info">
+              <h3 class="hero-card__name">Илья Муромец с Юлий</h3>
+              <p class="hero-card__price">119 000 ₽</p>
+              <p class="hero-card__desc">Лимитированная серия, расширенная комплектация.</p>
+              <button class="hero-card__button hero-card__button--cart" type="button">В корзину</button>
+            </div>
+          </div>
+          <div class="hero-card">
+            <img class="hero-card__image" src="../images/product-dobrynya.jpg" alt="Добрыня Никитич" width="200" height="250">
+            <div class="hero-card__info">
+              <h3 class="hero-card__name">Добрыня Никитич</h3>
+              <p class="hero-card__price">12 999 ₽</p>
+              <p class="hero-card__desc">Базовая модель с оптимальными характеристиками.</p>
+              <button class="hero-card__button hero-card__button--cart" type="button">В корзину</button>
+            </div>
+          </div>
+          <div class="hero-card">
+            <img class="hero-card__image" src="../images/product-alyozha.png" alt="Алёша Попович" width="200" height="250">
+            <div class="hero-card__info">
+              <h3 class="hero-card__name">Алёша Попович</h3>
+              <p class="hero-card__price">7 999 ₽</p>
+              <p class="hero-card__desc">Компактный формат и выгодная цена.</p>
+              <button class="hero-card__button hero-card__button--cart" type="button">В корзину</button>
+            </div>
+          </div>
         </div>
       </section>
     </main>
-
     <footer class="footer" role="contentinfo">
       <div class="wrap">
         <p style="margin:0;">© 2025 Семестровая работа</p>
